# MusicGenerationFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.json
Assets/: CMakeLists.txt  README.md
Assets/Datasets/: CMakeLists.txt  README.md
Assets/Models/: README.md
Assets/Soundfonts/: CMakeLists.txt  README.md
Modules/: CMakeLists.txt  README.md
Modules/BaseMIDIHelpers/Public/: MIDIHelpers.h
Modules/DataAnalysisModules/: ChannelPerTiming.py  ExtractMelody.py  FilterFiles.py  IntensityPerKey.py  KeyPerTiming.py  LoadImageMusic.py  LoadMusicFromFloatArray1.py  LoadMusicFromFloatArray2.py  LoadMusicMaskPitchChannels.py  LoadMusicMultiChannels.py  MIDIToVector.py  README.md  SeleniumScrapper  SeleniumScrapper.py
Modules/DataAnalysisModules/ChordsAnalyzer/: main.py
Modules/DataAnalysisModules/IntensityAnalyzer/: main.py
Modules/DataAnalysisModules/NotesVisualizer/: main.py  main2.py
Modules/LoadAllMIDI/: CMakeLists.txt  ConfigParser.h  main.cpp
Modules/LoadSingleMIDI/: CMakeLists.txt  main.cpp
Modules/ModularMusicGenerationTests/: README.md
Modules/ParseMidiFileIntensity/: CMakeLists.txt  ParseMidiFileIntensity.cpp  ParseMidiFileIntensity.h
Modules/RuntimeModules/: CMakeLists.txt  README.md
Modules/RuntimeModules/BeatsAnalyzer/: CMakeLists.txt  README.md  main.cpp
Modules/RuntimeModules/BeatsMaker/: README.md
Modules/RuntimeModules/ComposeMIDI/: CMakeLists.txt  main.cpp
Modules/RuntimeModules/FluidsynthMIDIPlayer/: CMakeLists.txt  FluidsynthMIDIPlayer.cpp  FluidsynthMIDIPlayer.h  FluidsynthPlayerAsync.cpp  FluidsynthPlayerAsync.h
Modules/RuntimeModules/FluidsynthMIDIPlayer/Standalone/: CMakeLists.txt  main.cpp
Modules/RuntimeModules/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
Modules/RuntimeModules/MMGEditor/: CMakeLists.txt  main.cpp  playerEditor.cpp  playerEditor.h
Modules/RuntimeModules/MelodyExtractor/: CMakeLists.txt  MelodyExtractor.cpp  MelodyExtractor.h  main.cpp
Modules/RuntimeModules/MelodyGenerator/: CMakeLists.txt  MelodyGenerator.cpp  MelodyGenerator.h  MelodyGenerator_LoadFile.cpp  MelodyGenerator_LoadFile.h  README.md
Modules/RuntimeModules/MelodyIPM/: CMakeLists.txt  MelodyExtractor.cpp  MelodyExtractor.h  Process.cpp  Process.h
Modules/RuntimeModules/ModularMusicGenerationTests/: CMakeLists.txt
Modules/RuntimeModules/ModularMusicGenerationTests/Src/: main.cpp
Modules/RuntimeModules/OnnxRuntime/: CMakeLists.txt
Modules/RuntimeModules/ParseMidiFileIntensity/: ParseMidiFileIntensity.cpp
Modules/RuntimeModules/PlayMIDI/: CMakeLists.txt  ConvertingParser.h  MIDIEvents.cpp  MIDIEvents.h  Player.h
Modules/RuntimeModules/PlayMIDI/Standalone/: CMakeLists.txt  main.cpp
Modules/RuntimeModules/SFML/: CMakeLists.txt
Modules/RuntimeModules/Sequencer/: CMakeLists.txt  Sequencer.cpp  Sequencer.h
Modules/RuntimeModules/fluidsynth/: CMakeLists.txt
Modules/RuntimeModules/glad/: CMakeLists.txt
Modules/RuntimeModules/glad/include/glad/: glad.h
Modules/RuntimeModules/glad/src/: glad.c
Modules/RuntimeModules/imgui/: CMakeLists.txt
Modules/RuntimeModulesWrappers/Python/: README.md
Modules/Tools/BPE/: BPE.py  BPEtest.py
Modules/TrainingModules/: README.md
Modules/TrainingModules/Pytorch/CausalLanguageExample/: bytePairBPEMidi.py  causalFinetuning.py  causalInference.py
Modules/TrainingModules/Pytorch/DiT/: DiT.py  customDiTPipeline.py  train.py  train_DiffusersDiTPipeline.py  train_customDiTPipeline.py
Modules/TrainingModules/Pytorch/ImageTrainingExamples/DDIM/: DDIMButterflies.py  DDIMMusic-old.py  DiffusionToOnnx.py  LoadONNX.py
Modules/TrainingModules/Pytorch/ImageTrainingExamples/DDPM/: DDPMButterflies.py  DDPMButterfliesMinimal.py
Modules/TrainingModules/Pytorch/MIDICausal/: REMITokenizer.py  causalFinetuning.py  causalFinetuning2.py  causalFinetuning3.py  causalFinetuningFromFolder.py  causalFinetuningText.py  causalInference2.py  causalInference3.py  customTokenizer.py  midiCompressionTest.py  midiTokenizer.py  reconstructMidiTest.py  sequentialFinetuningFromFolder.py  sequentialInference.py  sequentialTokenizer.py  structuredTokenizer.py  structuredTokenizerTest.py
Modules/TrainingModules/Pytorch/MIDITransformer/: midiTransformer.py
Modules/TrainingModules/Pytorch/MIDITransformerDiffusionTests/: downloadprocessdata.py  inference.py  train.py  training.py
Modules/TrainingModules/Pytorch/MIDITransformerDiffusionTests/pokemon-blip-captions-en-zh/: README.md:Zone.Identifier  dataset_infos.json  dataset_infos.json:Zone.Identifier  gitattributes:Zone.Identifier
Modules/TrainingModules/Pytorch/MIDITransformerDiffusionTests/pokemon_path/: metadata.csv  text_encodings.hdf5  val_encs.npy
Modules/TrainingModules/Pytorch/MidiCausalScratch/: causalFinetuningScratch.py
Modules/TrainingModules/Pytorch/MidiTok/: miditokModelTraining.py  tokenizerTraining.py
Modules/TrainingModules/Pytorch/MusicGeneration/: DDIMMusic.py  DDIMMusic2.py  DDIMMusicMaskPitchChannelsOpti.py  DDIMMusicMultiChannels.py  DDIMMusicRemapping1.py
Modules/TrainingModules/Pytorch/MusicGeneration/Helpers/: LoadDataset.py  Training.py
Modules/TrainingModules/Pytorch/MusicGeneration/MIDIDiffusion/: DDIMMusic.py  DDIMMusicMaskPitchChannels.py  DDIMMusicRemapping1.py  DDIMMusicRemapping2.py
Modules/TrainingModules/Pytorch/Spectrograms/: displayPhase.py  phaseReconstruction.py  wavSpectro.py  wavToSpectrogram.py
Modules/TrainingModules/Pytorch/TextGeneration/: MaskedLanguageModelling.py  MaskedLanguageModellingLoad.py
Modules/TrainingModules/Pytorch/customDiT/: configs.py  denoiser.py  diffusion.py  inference.py  train.py
Modules/TrainingModules/TFVAE2D/: README.md
Modules/TrainingModules/Tensorflow/TFVAE2D/: .gitignore  inference.py  model.py  training.py
Modules/TrainingModules/TorchDiffusers/: DDIMinference.py
Modules/TrainingModules/TorchDiffusers/NotWorking/: DDPMFlowers102.py
Modules/TrainingModules/TorchVAE/: main.py  reconstructMIDI.py
Modules/fluidsynth/lib/cmake/fluidsynth/: FluidSynthTargets.cmake
Modules/fluidsynth/lib/pkgconfig/: fluidsynth.pc
(+5 files in other folders)
