cmake_minimum_required(VERSION 3.10)

set(ModulesDirectory "${CMAKE_CURRENT_SOURCE_DIR}")

if(DOWNLOAD_MODULE_DEPENDENCIES)
    add_subdirectory(fluidsynth)
    add_subdirectory(OnnxRuntime)
    add_subdirectory(SFML)
endif()

option(BUILD_SHARED_LIBS "Build shared libraries" ON)
add_subdirectory(glfw)
add_subdirectory(glad)
add_subdirectory(imgui)
# add_subdirectory(NativeFileDialog)
add_subdirectory(PortableFileDialogs)
add_subdirectory(EasyMidiFileParserCpp)
add_subdirectory(ModularMusicGenerationCore)
add_subdirectory(ModularMusicGenerationTests)
add_subdirectory(BeatsAnalyzer)
add_subdirectory(ParseMidiFileIntensity)
add_subdirectory(PlayMIDI)
add_subdirectory(ComposeMIDI)
add_subdirectory(MMGEditor)
